add ring buffer implementations